--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.16.4",
-        "mongoose": "^5.4.15"
+        "mongoose": "^5.4.15",
+        "passport": "^0.4.0",
+        "passport-google-oauth20": "^1.0.0"
     }
 }
