--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.16.4",
+        "express-handlebars": "^3.0.2",
         "express-session": "^1.15.6",
         "mongoose": "^5.4.15",
         "passport": "^0.4.0",
